# Senior-Design

./: README.md  setup.cfg
Arduino/: .gitignore  bluetooth.ino
Arduino/lib/: test.cpp
Arduino/src/: Lab 3.code-workspace  main.cpp
ESP32/Sensors/: UltraSonic.c
ESP32/can_comm/: .gitignore  platformio.ini
ESP32/can_comm/include/: can.h  gps.h  imu.h  rover.h
ESP32/can_comm/src/: can.c  gps.c  main.c  rover.c
ESP32/platformio_ws/: .gitignore
ESP32/platformio_ws/include/: can.h  gps.h  imu.h  rover.h  ultrasonic.h
ESP32/platformio_ws/src/: can.c  gps.c  imu.c  main.c  platformio_ws.code-workspace  rover.c  ultrasonic.c
K64F/: main.c
NavQ/: bluetooth_node.py  object_detection_node.py  uart_node.py
NavQPlus/: bt_audio_start.sh  rover.dbc  test_can_receive.py
NavQPlus/can_comms/: can_decoder.py
NavQPlus/can_comms/rover_ws/src/can_interface/: setup.cfg  setup.py
NavQPlus/can_comms/rover_ws/src/can_interface/launch/: rover_launch.py
NavQPlus/can_comms/scripts/: setup-can.service  setup-can.sh
NavQPlus/install/: local_setup.sh  setup.sh
NavQPlus/install/can_interface/lib/can_interface/: can_bridge_node
NavQPlus/install/can_interface/share/can_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  rover_optimized.dbc
NavQPlus/install/rover_project/include/rover_project/rover_project/msg/: gps_fix.hpp  nav_goal.h  proximity.h  proximity.hpp  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  waypoint_list.h
NavQPlus/install/rover_project/include/rover_project/rover_project/msg/detail/: gps_fix__builder.hpp  gps_fix__functions.h  gps_fix__rosidl_typesupport_introspection_cpp.hpp  gps_fix__struct.h  gps_fix__type_support.c  gps_fix__type_support.cpp  gps_fix__type_support.hpp  imu_orientation__builder.hpp  imu_orientation__functions.c  (+28 more)
NavQPlus/install/rover_project/lib/rover_project/: audio_IO.py  autonomous_drive_node.py  can_bridge_node.py  fast_scnn_node.py  path_planner_node.py  send_goal.py  uart_node.py
NavQPlus/install/rover_project/share/ament_index/resource_index/package_run_dependencies/: rover_project
NavQPlus/install/rover_project/share/ament_index/resource_index/rosidl_interfaces/: rover_project
NavQPlus/install/rover_project/share/rover_project/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
NavQPlus/install/rover_project/share/rover_project/cmake/: export_rover_project__rosidl_generator_cExport-noconfig.cmake  export_rover_project__rosidl_generator_cExport.cmake  export_rover_project__rosidl_generator_cppExport.cmake  export_rover_project__rosidl_generator_pyExport-noconfig.cmake  export_rover_project__rosidl_typesupport_fastrtps_cppExport.cmake  rover_projectConfig.cmake  rover_project__rosidl_typesupport_cppExport.cmake  rover_project__rosidl_typesupport_introspection_cExport-noconfig.cmake  rover_project__rosidl_typesupport_introspection_cExport.cmake  rover_project__rosidl_typesupport_introspection_cppExport-noconfig.cmake
NavQPlus/install/rover_project/share/rover_project/launch/: rover_launch.py
NavQPlus/install/rover_project/share/rover_project/maps/: UCR_Centerlines.dbf  UCR_Centerlines.prj  UCR_Centerlines.shp  UCR_Centerlines.shx
NavQPlus/install/rover_project/share/rover_project/msg/: ImuOrientation.idl
NavQPlus/install/yolo_npu_ros/lib/yolo_npu_ros/: fast_scnn_node
NavQPlus/install/yolo_npu_ros/share/yolo_npu_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
NavQPlus/log/: latest_build
NavQPlus/models/: fast_scnn_opt_int8.tflite
NavQPlus/models/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
NavQPlus/models/log/: latest_build
NavQPlus/models/output/: fast_scnn_int8_summary_Ethos_U65_Embedded.csv  fast_scnn_int8_vela.tflite
NavQPlus/ros2_ws/: .gitignore
NavQPlus/ros2_ws/rover_project/: .gitignore  CMakeLists.txt  README  README.md  UCR_Centerlines.json  package.xml  requirements.txt  setup.cfg  setup.py.bak
NavQPlus/ros2_ws/rover_project/launch/: rover_launch.py
NavQPlus/ros2_ws/rover_project/msg/: GpsFix.msg  ImuOrientation.msg  NavGoal.msg  Proximity.msg
NavQPlus/ros2_ws/rover_project/scripts/: audio_IO.py  audio_input_node.py  audio_output_node.py  autonomous_drive_node.py  bluetooth_node.py  can_bridge_node.py  fast_scnn_node.py  hi.py  insepct_shapefile.py  path_planner_node.py  send_goal.py  speaker.py  test_can_receive.py  uart_node.py  waypoint_follower_node.py
NavQPlus/ros2_ws/rover_project/test/: README.md  test_autonomous_drive.py  test_coordinate_converter.py  test_device_integration.py  test_fast_scnn.py  test_node_integration.py  test_path_planning.py  test_waypoint_math.py
NavQPlus/ros2_ws/src/speech_recognition_node/: package.xml  requirements.txt  setup.py
NavQPlus/ros2_ws/src/speech_recognition_node/speech_recognition_node/: audio_input.py
NavQPlus/ros2_ws/src/yolo_npu_ros/: .gitignore  README.md  setup.py
NavQPlus/ros2_ws/src/yolo_npu_ros/yolo_npu_ros/: fast_scnn_node.py  yolo_npu_node.py
models/: fast_scnn_int8.tflite
yolo_npu_ros/: fast_scnn_node.py
(+7 files in other folders)
