<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_project</name>
  <version>0.0.0</version>
  <description>Autonomous rover navigation project</description>
  <maintainer email="gshaddock1999@gmail.com">gage</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ROS2 Python dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- CAN bus dependencies -->
  <exec_depend>python3-can</exec_depend>
  <build_depend>python3-cantools</build_depend>
  <exec_depend>python3-cantools</exec_depend>

  <!-- Serial communication dependencies -->
  <exec_depend>python3-serial</exec_depend>

  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>